[gd_scene load_steps=11 format=3 uid="uid://wfbhut8n2ico"]

[ext_resource type="Script" path="res://Components/ingredient.gd" id="1_4n3os"]
[ext_resource type="PackedScene" uid="uid://duromskhojgnm" path="res://Components/amount_changer.tscn" id="1_4pr8b"]
[ext_resource type="Texture2D" uid="uid://bvw1jde25nyye" path="res://Images/Ingredients/BeanSausage.webp" id="2_oe4s4"]
[ext_resource type="Script" path="res://Components/IngredientAnimationHandler.gd" id="3_xertk"]
[ext_resource type="Texture2D" uid="uid://bftcqrti8yluu" path="res://Styles/Particles/frame.png" id="5_7bxgm"]
[ext_resource type="Texture2D" uid="uid://be6lmbctkivst" path="res://Styles/Particles/dotted_frame.png" id="6_2o1w5"]

[sub_resource type="Animation" id="Animation_pi5qw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IngredientSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.477, 0.477)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("IngredientSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-36, -36)]
}

[sub_resource type="Animation" id="Animation_38gvh"]
resource_name = "magnify"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IngredientSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.477, 0.477), Vector2(0.572, 0.572)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("IngredientSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-36, -36), Vector2(-43.2, -43.2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c0cjc"]
_data = {
"RESET": SubResource("Animation_pi5qw"),
"magnify": SubResource("Animation_38gvh")
}

[sub_resource type="LabelSettings" id="LabelSettings_vlein"]
font_color = Color(0.494118, 0.211765, 0.0627451, 1)

[node name="Ingredient" type="Node2D"]
script = ExtResource("1_4n3os")

[node name="IngredientSprite" type="TextureRect" parent="."]
offset_left = -36.0
offset_top = -36.0
offset_right = 114.0
offset_bottom = 114.0
scale = Vector2(0.477, 0.477)
texture = ExtResource("2_oe4s4")

[node name="AmountChanger" parent="." instance=ExtResource("1_4pr8b")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_c0cjc")
}

[node name="AnimationHandler" type="Node" parent="."]
script = ExtResource("3_xertk")

[node name="RequiredAmountLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = -56.0
offset_right = 63.0
offset_bottom = -30.0
label_settings = SubResource("LabelSettings_vlein")
horizontal_alignment = 2

[node name="Frame" type="Sprite2D" parent="."]
position = Vector2(0, 5)
scale = Vector2(0.211, 0.2)
texture = ExtResource("5_7bxgm")

[node name="DottedFrame" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 5)
scale = Vector2(0.211, 0.2)
texture = ExtResource("6_2o1w5")

[connection signal="gui_input" from="IngredientSprite" to="." method="_on_ingredient_sprite_gui_input"]
[connection signal="mouse_entered" from="IngredientSprite" to="AnimationHandler" method="_on_ingredient_sprite_mouse_entered"]
[connection signal="mouse_exited" from="IngredientSprite" to="AnimationHandler" method="_on_ingredient_sprite_mouse_exited"]
